[package]
name = "jmahook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
quick-xml = { version = "0.22.0", features = [ "serialize" ] }
reqwest = "0.11.9"
serde = { version = "1.0.136", features = [ "derive" ] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = [ "full" ] }
